removed base64 dependency
git-svn-id: svn://localhost/trunk@799 7f4d9e04-a92a-ab41-bea9-970b690ef4a7